text-aligned: key metrics

--- a/styles.css
+++ b/styles.css
@@ -352,9 +352,10 @@ img {
 .metricTile--stat {
   display        : flex;
   flex-direction : column;
-  align-items    : flex-start;
+  align-items    : flex-end;
   justify-content: center;
   padding        : 18px 22px;
+  text-align     : right;
 }
 
 .metricTile__value {
